2017-10-13 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-833

	* src/rte.cc (get_stepwise_scattersky_source):
	Bugfix in setting up pnd input for pha_mat_sptFromScat_data. Fixes bugg
	reported by Patrick (hopefully...).

	* src/m_optproperties.cc ([opt_prop,pha_mat]_sptFrom*):
	Identical temperature-range-exceed error messages are raised by all the
	methods. For easier debugging, add info by which (non-WS-)method it was
	raised.

2017-10-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-832

	* src/m_microphysics.cc (psdMgdMass): A small start.

	(psdMgd): Non-fixed parameters are now flagged by Inf, instead of NaN.

	* src/math_funcs.cc (gamma_func, lgamma_func): Removed.
	std::tgamma and std::lgamma are now at hand.

	(mgd): Moved from microphysics.cc.

2017-10-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-831

	* src/m_microphysics.cc (psdF07, psdMH97, psdW16): To calculate
	dpsd_data_dx, the perturbation of IWC/RWC is now always 1e-9. That
	was found to work better in tests.

	* src/m_jacobian.cc (jacobianAddFreqShift): It is now checked that
	length of f_grid is > 1, which is a required by the code.

2017-10-11  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-830

	* src/agenda_record.cc (operator<<):

	Inputs and outputs were not printed for ArrayOfAgenda. Fixes bug
	reported by Patrick.

2017-10-11 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-829

	* src/arts_api.[h.cc] (get_version, VersionStruct):
	Added function and struct to return ARTS version number.

2017-10-10 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-828

	* src/m_fos.cc (iyHybrid2):
	Put derivative variable manipulation behind jacobian_do/j_analytical_do
	barriers. This as perturbation jacobian calcs will call the
	iy_main_agenda with jacobian_do flag, but unmodified jacobian_quantities
	settings (i.e. we can not rely on the contents or size of
	jacobian_quantities only).